terminada la implementación básica de una calculadora, con interfáz iOS

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -30,7 +30,7 @@
             <button class="item numbers" value="3">3</button>
             <button class="item item3 sign" value="+">+</button>
             <button class="item itemZero numbers" value="0">0</button>
-            <button class="item dot">.</button>
+            <button class="item dot" value=".">.</button>
             <button class="item item3 equals">=</button>
         </div>
     </div>
